--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -11,7 +11,7 @@
     "english": "A Tampere café channeling 1960s-70s modernism and Bauhaus functionalism. Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take."
   },
   "about": {
-    "title": "MODERNISM & FUNCTIONALISM",
+    "title": "IHMISTEN JA MODERNISMIN LINJOJEN KOHTAUSPAIKKA",
     "description": "Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take.",
     "coffee": "COFFEE",
     "coffeeDesc": "Good coffee",
@@ -39,9 +39,20 @@
     "address": "SATAKUNNANKATU 7 B 22",
     "city": "33100 TAMPERE",
     "instagram": "Instagram",
-    "map": "Map"
+    "map": "Map",
+    "send": "Send",
+    "sending": "Sending...",
+    "success": "Thanks!",
+    "error": "Failed to send the message. Please try again.",
+    "close": "Close",
+    "contact": "Contact"
   },
   "footer": {
     "copyright": "© 2025 CAFE NOOSI"
+  },
+  "legal": {
+    "privacyTitle": "Privacy Notice",
+    "updated": "Updated",
+    "back": "Back to home"
   }
 }
