--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -10,7 +10,7 @@
     "english": "A Tampere café channeling 1960s-70s modernism and Bauhaus functionalism. Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take."
   },
   "about": {
-    "title": "MODERNISM & FUNCTIONALISM",
+    "title": "IHMISTEN JA MODERNISMIN LINJOJEN KOHTAUSPAIKKA",
     "description": "Cafe Noosi embodies the clean lines and functional beauty of 1960s-70s modernism, drawing inspiration from Bauhaus principles of form following function.",
     "coffee": "COFFEE",
     "coffeeDesc": "Carefully selected beans, expertly prepared",
@@ -38,7 +38,13 @@
     "address": "SATAKUNNANKATU 7 B 22",
     "city": "33100 TAMPERE",
     "instagram": "Instagram",
-    "map": "Map"
+    "map": "Map",
+    "send": "Send",
+    "sending": "Sending...",
+    "success": "Thanks!",
+    "error": "Failed to send the message. Please try again.",
+    "close": "Close",
+    "contact": "Contact"
   },
   "footer": {
     "copyright": "© 2024 CAFE NOOSI"
