--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -10,7 +10,7 @@
     "english": "A Tampere café channeling 1960s-70s modernism and Bauhaus functionalism. Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take."
   },
   "about": {
-    "title": "MODERNISMIA & FUNKTIONALISMIA",
+    "title": "IHMISTEN JA MODERNISMIN LINJOJEN KOHTAUSPAIKKA",
     "description": "Cafe Noosi ilmentää 1960-70 -lukujen modernismin puhtaita linjoja ja toiminnallista kauneutta, ammentaen inspiraatiota Bauhausin muodon seuraa toimintoa -periaatteesta.",
     "coffee": "KAHVI",
     "coffeeDesc": "Huolellisesti valitut pavut, asiantuntevasti valmistettu",
@@ -38,7 +38,13 @@
     "address": "SATAKUNNANKATU 7 B 22",
     "city": "33100 TAMPERE",
     "instagram": "Instagram",
-    "map": "Kartta"
+    "map": "Kartta",
+    "send": "Lähetä",
+    "sending": "Lähetetään...",
+    "success": "Kiitos!",
+    "error": "Viestin lähetys epäonnistui. Yritä uudelleen.",
+    "close": "Sulje",
+    "contact": "Ota yhteyttä"
   },
   "footer": {
     "copyright": "© 2024 CAFE NOOSI"
