--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -1,38 +1,18 @@
 {
   "navigation": {
     "about": "About",
-    "menu": "Menu",
     "gallery": "Gallery",
     "contact": "Contact"
   },
   "hero": {
-    "title": "1960s-70s Modernism",
-    "subtitle": "A Tampere café channeling 1960s-70s modernism and Bauhaus functionalism.",
-    "english": "A Tampere café channeling 1960s-70s modernism and Bauhaus functionalism. Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take."
+    "tagline": "Cafe with a pinch of Bauhaus"
   },
   "about": {
-    "title": "IHMISTEN JA MODERNISMIN LINJOJEN KOHTAUSPAIKKA",
-    "description": "Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take.",
-    "coffee": "COFFEE",
-    "coffeeDesc": "Good coffee",
-    "wine": "WINE",
-    "wineDesc": "Wine available",
-    "food": "FOOD",
-    "foodDesc": "Food and bread",
-    "atmosphere": "ATMOSPHERE",
-    "atmosphereDesc": "Peaceful environment"
+    "title": "INTERSECTION OF PEOPLE AND MODERNISTIC LINES",
+    "description": "Welcome for coffee or wine, brulee or kekkeruusi, sandwich or traditional pöperö with a new wave take."
   },
   "gallery": {
-    "title": "GALLERY"
-  },
-  "food": {
-    "title": "FOOD & DRINKS",
-    "subtitle": "TRADITIONAL WITH A MODERN TWIST",
-    "description": "Fresh bread and delicious desserts.",
-    "bread": "BREAD",
-    "breadDesc": "Fresh bread",
-    "desserts": "DESSERTS",
-    "dessertsDesc": "Delicious desserts"
+    "title": "SPACE & DESIGN"
   },
   "contact": {
     "title": "VISIT US",
@@ -40,12 +20,25 @@
     "city": "33100 TAMPERE",
     "instagram": "Instagram",
     "map": "Map",
+    "contact": "Contact",
     "send": "Send",
     "sending": "Sending...",
     "success": "Thanks!",
+    "successMessage": "Thanks for reaching out, we'll get back to you soon!",
     "error": "Failed to send the message. Please try again.",
     "close": "Close",
-    "contact": "Contact"
+    "networkError": "Network error. Please check your connection and try again.",
+    "hours": {
+      "title": "Opening hours",
+      "friday": "Fri 14-20",
+      "saturday": "Sat 11-20",
+      "sunday": "Sun 11-18"
+    },
+    "form": {
+      "name": "Name",
+      "email": "Email",
+      "message": "Message"
+    }
   },
   "footer": {
     "copyright": "© 2025 CAFE NOOSI"
@@ -53,6 +46,7 @@
   "legal": {
     "privacyTitle": "Privacy Notice",
     "updated": "Updated",
-    "back": "Back to home"
+    "back": "Back to home",
+    "link": "Privacy notice"
   }
 }
